--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="/index.js" async  type="module"></script>
+    <script src="/service-worker.js" async></script>
     <link href="/index.css" rel="stylesheet" />
   </head>
   <body>
